adding index file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>MY FIRST WEBSITE.</h1>
 <p>MY FIRST PARAGRAPH.</p>
 
-<a href="file:///C:/Users/Denver/Documents/My%20first%20website/index/link.html">Click this link.</a>
+<a href="./link.html">Click this link.</a>
 
 </body>
 </html>
