--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 
-<h1>MY FIRST WEBSITE.</h1>
-<p>MY FIRST PARAGRAPH.</p>
+<h1>TANGINA KA.</h1>
+<p>TANGINA KA ULET.</p>
 
-<a href="./link.html">Click this link.</a>
+<a href="./link.html">Click mo 'to, maangas.</a>
 
 </body>
 </html>
