--- a/link.html
+++ b/link.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>BUDEK</title>
 </head>
 <body>
 
-<h1>TANGINA MO PA REN.</h1>
+<h1>KINO.</h1>
+<h1>KINONGINAMO.</h1>
 
 
 </body>
