--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>INCEL</title>
+<title>LOVE</title>
 </head>
 <body>
 
-<h1>TANGINA KA.</h1>
-<p>TANGINA KA ULET.</p>
+<h1>I LOVE YOU.</h1>
+<p>I LOVE YOU ULET.</p>
 
-<a href="./link.html">Click mo 'to, maangas.</a>
+<a href="./link.html">Click mo 'to, para malaman mo kung gaano kita kamahal.</a>
 
 </body>
 </html>
