--- a/link.html
+++ b/link.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>BUDEK</title>
+<title>LOVE</title>
 </head>
 <body>
 
-<h1>KINO.</h1>
-<h1>KINONGINAMO.</h1>
+<h1>I LOVE YOU NA NAMAN.</h1>
+<h1>HAHAHAHAHA MWAH.</h1>
 
 
 </body>
